Complete full payent creation and auto authorization logic